# axum_demo

./: .env  Cargo.toml
src/: main.rs
src/mw/: demo.rs  mod.rs
src/routes/: hello_auth.rs  hello_db.rs  hello_world.rs  mod.rs
