[package]
name = "llm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum = { version = "0.7.1", features = ["macros"] }
bcrypt = "0.15.0"
chrono = "0.4.31"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
jsonwebtoken = "9.2.0"
sea-orm = { version = "0.12.8", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_with = "3.4.0"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
validator = { version = "0.16.1", features = ["derive"] }
